--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "moment": "^2.27.0",
     "ngx-indexed-db": "^5.0.5",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
