added ngx-socket-io wrapper lib, to enable live comment update on show campground page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,13 @@
     },
     {
       "path": "./tsconfig.spec.json"
+    },
+    {
+      "compilerOptions": {
+        "paths": {
+          "rxjs": ["node_modules/rxjs"]
+        }
+      }
     }
-]
+  ]
 }
