--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~10.0.5",
     "moment": "^2.27.0",
     "ngx-indexed-db": "^5.0.5",
+    "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
