--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@types/mapbox-gl": "^1.11.2",
+    "mapbox-gl": "^1.12.0",
     "moment": "^2.27.0",
     "ngx-indexed-db": "^5.0.5",
     "ngx-socket-io": "^3.2.0",
