--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@types/mapbox-gl": "^1.11.2",
+    "bad-words": "^3.0.3",
     "mapbox-gl": "^1.12.0",
     "moment": "^2.27.0",
     "ngx-indexed-db": "^5.0.5",
