Configuring angular client to use graphQL API

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
               "socket.io-parser",
               "bad-words",
               "badwords-list",
-              "moment"
+              "moment",
+              "zen-observable",
+              "graphql-tag"
             ]
           },
           "configurations": {
