--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@types/mapbox-gl": "^1.11.2",
+    "apollo-angular": "^2.0.4",
     "bad-words": "^3.0.3",
     "mapbox-gl": "^1.12.0",
     "moment": "^2.27.0",
@@ -31,7 +32,9 @@
     "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^15.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.4",
