graphql error handling from existing angular http interceptor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,12 @@
       "compilerOptions": {
         "paths": {
           "rxjs": ["node_modules/rxjs"]
-        }
+        },
+        "lib": [
+          "es2017",
+          "dom",
+          "esnext.asynciterable"
+        ]
       }
     }
   ]
